--- a/web/src/main/webapp/v2/src/app/core/components/application-inspector-title/application-inspector-title-container.component.css
+++ b/web/src/main/webapp/v2/src/app/core/components/application-inspector-title/application-inspector-title-container.component.css
@@ -1,3 +1,7 @@
+:host {
+    display: block;
+    height: 32px;
+}
 .l-wrapper {
     cursor: pointer;
     display: block;
